# Generated by Django 5.2 on 2025-05-21 20:12

import django.db.models.deletion
from django.conf import settings
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('myapp', '0007_pedido_pago_pedido_status_alter_avaliacao_nota_and_more'),
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
    ]

    operations = [
        migrations.RemoveField(
            model_name='carrinho',
            name='cliente',
        ),
        migrations.RemoveField(
            model_name='carrinho',
            name='pedido',
        ),
        migrations.RemoveField(
            model_name='itemcarrinho',
            name='carrinho',
        ),
        migrations.RemoveField(
            model_name='itemcarrinho',
            name='produto',
        ),
        migrations.RemoveField(
            model_name='itempedido',
            name='produto',
        ),
        migrations.RemoveField(
            model_name='statusentrega',
            name='pedido',
        ),
        migrations.AddField(
            model_name='cliente',
            name='user',
            field=models.OneToOneField(blank=True, null=True, on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL),
        ),
        migrations.AlterField(
            model_name='pedido',
            name='cliente',
            field=models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='myapp.cliente'),
        ),
        migrations.DeleteModel(
            name='Avaliacao',
        ),
        migrations.DeleteModel(
            name='Carrinho',
        ),
        migrations.DeleteModel(
            name='ItemCarrinho',
        ),
        migrations.DeleteModel(
            name='Produto',
        ),
        migrations.DeleteModel(
            name='StatusEntrega',
        ),
    ]
